@@ -1,2 +1,2 @@
 #!/bin/sh
-java -Xmx900M -Xms512M -jar spigot-1.11.jar nogui
+java -Xmx900M -Xms512M -XX:+AggressiveOpts -XX:+UseCompressedOops -jar spigot-1.11.jar nogui
